crates/connectors/ndc-citus/tests/snapshots/query_tests__predicates__select_where_album_id_equals_self.snap
---
source: crates/connectors/ndc-citus/tests/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": 340,
        "Title": "Liszt - 12 Études D'Execution Transcendante"
      }
    ]
  }
]
